src/test/ui/resolve/issue-21221-1.stderr
error[E0405]: cannot find trait `Mul` in this scope
  --> $DIR/issue-21221-1.rs:43:6
   |
LL | impl Mul for Foo {
   |      ^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use mul1::Mul;
   |
LL | use mul2::Mul;
   |
LL | use std::ops::Mul;
   |

error[E0412]: cannot find type `Mul` in this scope
  --> $DIR/issue-21221-1.rs:58:16
   |
LL | fn getMul() -> Mul {
   |                ^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use mul1::Mul;
   |
LL | use mul2::Mul;
   |
LL | use mul3::Mul;
   |
LL | use mul4::Mul;
   |
and 2 other candidates

error[E0405]: cannot find trait `ThisTraitReallyDoesntExistInAnyModuleReally` in this scope
  --> $DIR/issue-21221-1.rs:63:6
   |
LL | impl ThisTraitReallyDoesntExistInAnyModuleReally for Foo {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Div` in this scope
  --> $DIR/issue-21221-1.rs:68:6
   |
LL | impl Div for Foo {
   |      ^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL | use std::ops::Div;
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0405, E0412.
For more information about an error, try `rustc --explain E0405`.
